[package]
edition = "2021"
name = "lapce-elixir"
version = "0.1.0"

[patch.crates-io]
lsp-types = {git = "https://github.com/gluon-lang/lsp-types.git", tag = "v0.95.1"}

[dependencies]
anyhow = "1.0"
flate2 = "1.0.22"
lapce-plugin = "0.1.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.59"
